dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_291286518.log
== SUBMISSION (2025-08-22 15:36:43)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite numero?"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite numero?512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite numero?2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite numero?11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite numero?888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite numero?22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:35:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(10)

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
20
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
20
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
20
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
20
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:35:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite numero?")

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("digite numero?")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("digite numero?")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("digite numero?")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("digite numero?")
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("digite numero?")
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:36:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite numero?"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite numero?512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite numero?2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite numero?11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite numero?888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite numero?22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:36:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite numero?"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite numero?512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite numero?2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite numero?11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite numero?888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite numero?22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 15:35:21)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(10)

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
20
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
20
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
20
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
20
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:36:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite numero?"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
digite numero?512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
digite numero?2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
digite numero?11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
digite numero?888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
digite numero?22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:34:48)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("digite numero?")

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("digite numero?")
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'digite numero?'
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("digite numero?")
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'digite numero?'
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("digite numero?")
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'digite numero?'
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("digite numero?")
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'digite numero?'
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int("digite numero?")
          ^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'digite numero?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
